--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
    <body style="background-color:rgb(212, 240, 234);">
-      <h1>Welcome to Stack Simplify - Azure DevOps App1 - V13</h1>
-      <h2>Azure DevOps Demo App1</h2>
-      <h2>Application Version: V13</h2>
+      <h1>Welcome to James Ye - Azure DevOps AKS demo - V20210812</h1>
+      <h2>Azure DevOps AKS Demo</h2>
+      <h2>Application Version: V20210812</h2>
    </body>
 </html>
 
